# cocalc-env

./: .gitignore  .gitmodules  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  jupyter_config.py  pyproject.toml  update-master-and-restart.sh
.github/workflows/: docker.yml
.jupyter/: jupyter_server_config.py
logs/: README.md
static/: index.html
