[tool.poetry]
name = "trading-strategy-jupyter-env"
version = "0.1.0"
description = "Trading Strategy Jupyter environment"
authors = ["Hieu Nguyen <hieu@tradingstrategy.ai>"]
license = "APGL"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
trade-executor = {path = "./deps/trade-executor", extras = ["execution"], develop = true}

# poetry is blah
web3-ethereum-defi = {version="0.14.1", extras=["data"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
